Refs #1820  * Fix // TODO: please review $requestString .= '&disable_generic_filters=1'  Now disabling generic filters speficically in charts  * Also fix for issue that columns sorted was kept when changing to another table view, but the column might not exist or be visible
git-svn-id: http://dev.piwik.org/svn/trunk@5464 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -338,7 +338,7 @@ table thead div {
 	white-space:nowrap; 
 	font-size:10px;
 	padding:6px 5px;
-	border-top:1px solid #948c7d;
+	border-top:1px solid #B6B0A6;
 }
 
 .dataTableFooterWrap{ position:relative;  width:800px;}
